--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* style.css */
+
 
 body {
   font-family: Arial, sans-serif;
@@ -16,11 +16,12 @@ header {
 }
 #al{
     margin-top: 280px;
-    border: 1px solid black;
+   
 
     width: 500px;
     margin: auto;
     border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 main {
     margin-top: 100px;
